# POLARIS

./: .gitignore  PLAN.md  README.md  thallium-0-2.tar
polaris_poc/: .gitignore  README.md  llm_calls.jsonl  pyproject.toml  pytest.ini  requirements.txt
polaris_poc/config/: polaris_config.yaml
polaris_poc/docs/: .todo  CONFIGURATION_STANDARDIZATION.md  DIGITAL_TWIN_IMPLEMENTATION_SUMMARY.md  ISSUES.md  README_DIGITAL_TWIN.md  README_META_LEARNER.md  digital_twin_integration.md  knowledge.md
polaris_poc/scripts/: build.py  generate_proto.py  setup_test_env.py  validate_configs.py
polaris_poc/src/config/: PLUGIN_CONFIGURATION_GUIDE.md  framework_config.schema.json  gemini_world_model.yaml  hybrid_world_model.yaml  managed_system.schema.json  mock_world_model.yaml  plugin_config_template.yaml  polaris_config.yaml  statiscal_world_model.yaml  world_model_config.schema.json
polaris_poc/src/polaris/adapters/: base.py  execution.py  execution_adapter.py  monitor.py  monitor_adapter.py
polaris_poc/src/polaris/agents/: digital_twin_agent.py  example_meta_learner.py  llm_reasoner.py  meta_learner_agent.py  meta_learner_llm.py  reasoner_agent.py
polaris_poc/src/polaris/common/: __init__.py  config.py  (+8 more)
polaris_poc/src/scripts/: adapter_verify.py  digital_twin_probe.py  kb_query_client.py  nats_spy.py  observe_nats_stream.py  start_component.py
polaris_poc/tests/: test_digital_twin_events.py  test_enhanced_state_tracking.py  test_kb_storage.py  test_meta_learner_agent.py  test_proto_wrappers.py  test_validation.py  test_world_model.py  test_world_model_factory.py
(+288 files in other folders)
